# api/api.go
@@ -19,7 +19,17 @@ func NewGin(h *handler.Handler)*gin.Engine{
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(files.Handler))
 	p:=r.Group("/public")
-
 	p.POST("/create", h.CreatePublic)
+	p.PUT("/update", h.UpdatePublic)
+	p.DELETE("/delete", h.DeletePublic)
+	p.GET("/getall", h.GetAllPublic)
+	p.GET("/getbyid", h.GetbyIdPublic)
+	
+	pa:=r.Group("/party")
+	pa.POST("/create", h.CreateParty)
+	pa.PUT("/update", h.UpdateParty)
+	pa.DELETE("/delete", h.DeleteParty)
+	pa.GET("/getall", h.GetAllParty)
+	pa.GET("/getbyid", h.GetbyIdParty)
 	return r
 }
